<resources>
    <string name="app_name">ThemeStylesIcons</string>
    <string name="data">Data</string>
    <string name="tipo_refeicao">Tipo Refeição</string>
    <string name="cafe_da_manha">Café da manha</string>
    <string name="almoco">Almoço</string>
    <string name="cafe_da_tarde">Café da tarde</string>
    <string name="jantar">Jantar</string>
    <string name="ceia">Ceia</string>
    <string name="refeicao_extra">Refeição Extra</string>
    <string name="refeicao_fora_horario">Refeição fora de hora</string>
    <string name="refeicao_horario_normal">Refeição horario normal</string>
    <string name="com_fome">Com Fome</string>
    <string name="sem_fome">Sem Fome</string>
    <string name="salvar">Salvar</string>
    <string name="limpar">Limpar</string>
    <string name="dd_mm_aaaa">dd/mm/aaaa</string>
    <string name="formulario_limpo_com_sucesso">Formulário Limpo com sucesso!</string>
    <string name="preencha_a_data_da_refeicao">Preencha a data da refeição</string>
    <string name="selecione_o_estado_do_apetite">Selecione o estado do apetite</string>
    <string name="tipo">"Tipo: "</string>
    <string name="stringdata">"Data: "</string>
    <string name="fora_do_horario">"Fora do Horário: "</string>
    <string name="apetite">"Apetite: "</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="clicada">Clicada !</string>
    <string name="logo_utfpr">Logo UTFPR</string>
    <string name="especialização_tecnologia_java">Especialização Tecnologia Java</string>
    <string name="lucas_poltronieri_sampaio">Lucas Poltronieri Sampaio</string>
    <string name="lucaspoltronierisampaio">lucaspoltronierisampaio@gmail.com</string>
    <string name="descricao">App para registrar as refeições realizadas diariamente</string>
    <string name="Sobre">sobre</string>
    <string name="sobre">Sobre</string>
    <string name="controle_alimentar">Controle Alimentar</string>
    <string name="adicionar">Adicionar</string>
    <string name="utfpr">UTFPR – Universidade Tecnológica Federal do Paraná</string>
    <string name="editar">Editar</string>
    <string name="excluir">Excluir</string>
    <string name="nova_refeicao">Nova Refeição</string>
    <string name="editar_refeicao">Editar Refeição</string>
    <string name="configuracoes">Configurações</string>
    <string name="modo_escuro">Modo Escuro</string>
</resources>